Changed my message a bit

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>I don't know how far my little project will go.  I don't know if or when I will be able to use Blender in my professional career.  Therefore, I have no way of knowing if the scripts I write now will ever reach a more polished state.  Given the open nature of Blender, my hopes for the future of Blender itself, and my belief in the copy-left movement, I've chosen to release these scripts in their current unpolished state.</p>
 
-<p>I sincerely hope that they are as useful to you as they have been for me.  If you're a script writer who is interested in these scripts, please don't hesitate to improve them yourself!</p>
+<p>I sincerely hope that they are as useful to you as they have been for me.  If you're a script writer who is interested in these scripts, please don't hesitate to fork them!</p>
 
 <hr><p><img src="blur_location2.jpg" alt="Blur Button Location"></p>
 
