Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Blur Weights</h1>
         <p>Adds the ability to blur the weights of a vertex group in Blender. </p>
 
-        <p class="view"><a href="https://github.com/assumptionsoup/BlurWeights">View the Project on GitHub <small>assumptionsoup/BlurWeights</small></a></p>
+        <p class="view"><a href="https://github.com/assumptionsoup/Blur-Weights">View the Project on GitHub <small>assumptionsoup/Blur-Weights</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/assumptionsoup/BlurWeights/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/assumptionsoup/BlurWeights/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/assumptionsoup/BlurWeights">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/assumptionsoup/Blur-Weights/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/assumptionsoup/Blur-Weights/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/assumptionsoup/Blur-Weights">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -48,6 +48,16 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-11331484-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
